New Day New YOU

--- a/content/Daily-Notes/2024-11-18.md
+++ b/content/Daily-Notes/2024-11-18.md
@@ -35,6 +35,17 @@ ai-news: '[[AI News/AI-News-2024-11-18]]'
 
 ## 📝 Daily Reflections
 
+`Mon, 11/18/2024, 20:14`
+I found [[British Bulldog Ales]] here in Chico. I love this place. Open to 8 or 9 or whenever every night? They know me and introduced me as "the best tour guide ever"? I love it here.
+
+I'm about to code up a React browser game thingy at [[novabrew.org]] just for fun just cuz so I can cuz fuck it shy not.
+
+Let's mine for some intelligence for fun.
+
+
+
+
+---
 
 `Mon, 11/18/2024, 19:11`
 I'm at [[Banshee]] yet again. I love it here man, the vibe is just immaculate.
@@ -71,6 +82,23 @@ I'm going to pursue some specific sponsorship and other opportunities tomorrow, 
 Ok I know what I gotta do...now I just gotta fucking do it. I know how, when where, why, how much work it's gonna take, who I'll meet, what to watch out for, how it's gonna go down, and precisely what I can expect to receive if it goes well, and if it doesn't.
 I'm there. Let's do this.
 It begins tomorrow. The day before my 35th birthday. Not how I imagined my birthday would go. Yet here we are. I'm here, so is everyone else. Such is life. So be it.
+
+`Mon, 11/18/2024, 19:35`
+Tomorrow I gotta do the coffee hour at 8, so I'll need to plug my phone into the big battery to make sure it charges. Then I'll need to get to Stoble with plenty of time to get the coffee and everything brewed and ready and everything, so I'll probably need to get there early as fuck like 7 am or so. Well, after that I'll have the whole day to simply work on the things I gotta do, like getting on social services, or maybe even selling the stuff I have in storage.
+Then I'll do some YouTube recording in the quiet booth in the Stoble Workspace, and at 5 I'll give another Intro to AI class for the handful of people who will show up just to chill and talk and vibe. 
+Then it's my birthday, which I don't expect much from, and I'll work and do another AI class, and it'll be nice and they'll wish me a happy birthday, and I'll spend the night in the same place I did before with the hella nice tub. 
+Then the real work begins.
+I gotta get my ass to Detroit. That's where the real money is for me. 
+YouTube and Detroit.
+That's my next mission. That's my next life - YouTuber on a mission to make Robot Gardeners a thing with [[Johnny Autoseed]]
+
+Let's do this thing. The world needs it. The people need robot gardeners built by someone like me more than they need fun music. That's sad, but today, for me, it's true. The music can come soon. I can be one of the other people who makes stuff that feels fun after I solve this problem. I'll rest as I work on solving this problem for myself and for others. It's only a matter of time till [[AGI]] shows up and helps us build [[ASI]] - that will help me build robot gardeners. The more runway I build, the more of the bridge I make, the better the experience of sticking the landing and nailing the stunt will be
+This is the moment when we get ready to pull off the crazy move. We all look at each other, knowing the math checks out, the risks are real, but they're mitigated and the chances of success are pretty high. Higher than failure. Higher than they should be.
+You look at your friends and you all have the same thought: 
+> "***Are we really doing this?***"
+
+Yes. Yes you really are.
+
 
 ---
 
