--- a/content/work-efforts/WE0001-1119-2024/_router-WE0001-1119-2024.md
+++ b/content/work-efforts/WE0001-1119-2024/_router-WE0001-1119-2024.md
@@ -15,6 +15,8 @@ tags:
 ## Active Conversations
 - [[CHAT-WE0001-1119-2024-001]]
 - [[CHAT-WE001-1119-2024-002]]
+- [[CHAT-WE0001-1119-2024-003]]
+
 ## Archived Conversations
 - None yet
 
