New Day New YOU

--- a/content/Daily-Notes/2024-11-19.md
+++ b/content/Daily-Notes/2024-11-19.md
@@ -25,6 +25,51 @@ ai-news: '[[AI News/AI-News-2024-11-19]]'
 ## 📝 Daily Reflections
 ---
 
+# NovaBrew
+### *Real talk through unreal times.*
+
+[[NovaBrew]] is the name of the podcast, the show, the thing I'm doing. One word, just like that. NovaBrew.
+
+That's who I am to the world now. I'm [[@thecoffeejesus]] and he will always live inside me that is for sure.
+
+However, I am also now [[Chris from NovaBrew]] which is 5 syllables and that's the perfect amount to say.
+
+"Oh that's Chris from NovaBrew" it's also 3 words, 3 concepts, not 5 or 4 or 2.
+
+It's not "**Chris** from Nova _ space _ **Brew**"
+
+It's not "Christoph from NovaBrew" which is 6 syllables which feels like too much.
+
+It's 1 2 3 4 5 
+
+1 . Chris 2. from 3. No 4. va 5. Brew
+
+Chris from No - VAHBrew
+
+Chris from NovaBrEEUUUUGHHHHH
+
+Chris from NOOOOOOOOvaaaaaaaabbbreeeeeeeeeauuuuuuuuuuuu
+
+> "What do you think you are, some kind of special coffee magic man?"
+
+Why yes, yes I do. I absolutely do think that yes. I am and I can do magic coffee things and make you feel good and happy and at home. I'm about to make you feel so many new things you won't believe it. I'm about to take you on a tour, I'm Chris from NovaBrew and I'm about to take you on a tour of things you've never heard of, come on! Let's go.
+
+We're going deeper into the new, the novel, and wild and the fun. The free, the exciting, and the cutting edge of what's possible.
+
+We'll also dive into what's new with some old concepts. It's important to keep touch with the past so we know where we came from, and so we don't repeat the same mistakes as our ancestors. We stand on the achievements and failures of those who came before us, and likewise, our achievements or failures will determine what kind of world exists for those who come after us.
+
+NovaBrew is all about the cutting edge, which is fused as one piece with the handle of the past.
+
+The tang of the blade goes into the handle. Your hand grips what the blade was before it was sharpened into a cutting edge.
+
+At [[NovaBrew]] are mindful that each new development has deep roots. There are many ways it can go right, and many ways it can slip and hurt you, either on accident, or on purpose. 
+
+But a well-made chef's knife is a beautiful instrument, honed over generations into the perfect tool.
+
+We hope NovaBrew becomes such a tool in your life and over time we earn our place in your daily routine.
+
+---
+
 `Tue, 11/19/2024, 14:47`
 Ok, I'm ready. It's time, I'm good to go. Let's do this. I'm about to make myself famous on YouTube just...being myself and making good content. That's it. Commentary on current events, and my own life. That's the whole thing. My little slice of reality, my mind, on display for the world to see, on YouTube, so it's scalable, doing things I understand alone, and I'll have to deal with zero of the negativities because I just waited them out. I did it...but at great personal and professional cost. However, I did it. I'm ready to go. This is going to happen and once I kick this snowball off the hill I can't stop it. I'm ready to make my digital footprint. Let's forge a path!
 
@@ -36,6 +81,23 @@ Let's show them that they were wrong about me. Let's begin.
 `Tue, 11/19/2024, 14:53`
 The YouTube lifestyle begins. It is whatever I decide it to be. "Whatever I do is the actions of a Nobel Prize Winner because I have won a Nobel Prize" type energy from here out. Observe, make choices, stay true, keep it real.
 In my lane, moisturized, focused, real. That's where we're headed next, that's the vibe. That's what we're doing next. Yeehaw amigo - let's do this....
+
+`Tue, 11/19/2024, 14:56`
+The only thing left to do that AI can't do for me someday is to build relationships. I lost most of mine, the ones that mattered. They were so important to me and now so many of them are gone. I have to get them back, or at least try, and the best way for me to do that is to build a reputation online that cannot be beaten, by showing up every day on YouTube and commenting on things. That's the best way I can make a name for myself. Not just commenting and saying stuff for klout, but saying "This is how you can use this to make your life better." over and over and over again. Be known for it. Be known as the guy who makes things better. I step in and you immediately know I'm looking for all the ways this shit can be improved, which will make you feel criticized if you're insecure of course, but if you've got problems and you want somebody to handle them, I'm a relief I'm your guy. It'll make for a very difficult situation where I'm welcome or shunned. I could also just listen and validate and help out however I can, just walk around offering, being fun and sexy and lighting up rooms and telling funny stories and making people happy. That's the me I wanna return to - the guy who lights up a room and makes everyone happy.
+I had the ability to *perform* as that guy in context, but I've always been this sad dude inside when I step out of the limelight and out of the vortex. 
+Now, I'm still in the vortex and still roiling through the limelight, but in my own way. I'm choosing how to use the skills, the persona, and the character I built. I'm doing this on my own terms, my own way, with my own tools that I'm building my own damn self. I know I don't HAVE to be the one to do it, but god damn, does it feel good to be the one who is actually doing it.
+Fuck the haters. Fuck the noise. Fuck the bullshit. Just lock in and do what you gotta do to make yourself better so that you can make the world better. That's the whole thing
+
+So I guess the only thing left for me to do is to really lock into YouTube and figure out how I can become the best bastion of love and light, good energy, positive vibes, and loving kindness that will help keep people safe and transform their lives, in a non-exploitive, real way. 
+
+If I'm going to survive in this world, I have to make the outside match the inside. I can't do bullshit work for money, even if I desperately need it. What I can do is make a difference making content. I've proven that now again and again. YouTube is the best platform for making it as a content creator. I just have to get a job that pays the bills so that I can make the content I need to make and give myself the time and grace necessary to balance everything, heal my body, take my time, and really actually do this thing the way it's meant to be done. I get it now. I really fully understand it now, how I came across, why people treated me the way they did. I was a very obviously useful idiot. I had great energy, I was super fun, but I was naive and easy to manipulate. I was powerful and passionate, but also polarizing and profoundly blind to the way I affected others. I was, for lack of a better term, ignorant. And now that I'm not, I'm uninterested in the affairs of most people. I just want to do my thing, make my videos, say what I need to say - the obvious low hanging fruit that will get views and make me a living - and then get out and go home. I want to just make myself the person I am inside, and make the outside see that, and then fuck off and live a more peaceful, healthy, balanced, happy life. No more crazy insane stories of big parties and crazy larger than life events. Just taking charge of myself and my life and making it happen day in, day out. Schools, local politics, coffee shops, the potholes, all that shit. That's where I've always felt passion - for the lives of my fellow people. Just making them exist. Simply walking around, wandering from place to place, helping out how I can with the people around me, sampling the vibe, in many ways creating the vibe, and feeling that love and care and affection and sense of shared narrative, through multiple eyes.
+
+That's what I miss. That's what a year of YouTube could help me create. Nothing else would have half a chance at accelerating me that far. TikTok won't, Instagram didn't. YouTube is the last one left. It's the one I was the most scared of, because I understood that with this kind of thing whatever you put out there comes back, and I wanted it to be perfect. Now? I don't care. I don't give a shit at all. It's not gonna be perfect, and it's not gonna matter, cuz AI is here and it's coming and people are not in any way ready. I need to have a channel set up so that when shit hits the fan, I have people i can turn to for support. I don't want to be alone when this happens. I want to be with the people I love, the friends I miss. And I want things to be ok between us first. I have VERY limited time to fix this, and YouTube is the ONLY way I can make sure I do what I have to do in the time we all have left.
+
+Storytelling is my strongest skill. Let's put it to work here for once for myself for profit, so that I can live the way I'm meant to. 
+
+Fuck. Finally. Let's fucking do this.
+
 
 
 ---
@@ -121,6 +183,31 @@ Mr-mime (#122)
 ---
 
 ## 🤖 GPT Thoughts
+
+
+> [!ai]+ `11/19/2024, 3:02:16 PM`
+> 💭 **Prompt**: "Give me a comprehensive review of the current document the note the other context here please tell me your unfiltered thoughts in detail."
+
+The document captures reflections from **November 19, 2024**, emphasizing a significant personal and professional shift towards creating content on [[YouTube]]. The author expresses a strong desire to build an authentic online presence, using commentary on current events and personal experiences as a means of connection and self-expression.
+
+### Key Highlights:
+- **YouTube Focus**: The author is determined to start their YouTube journey, seeing it as a scalable platform for showcasing their personality and insights.
+- **Personal Growth**: They recognize the importance of building relationships and reputation online, aiming to be known for positivity and improvement.
+- **Creative Projects**: Mention of developing a [[Python]] game titled *Teleport Massive* reflects a commitment to learning and experimentation.
+- **Community Engagement**: Discussions with peers like [[Katie]] and [[Ben]] indicate a collaborative spirit, with a focus on innovation in tech and AI.
+
+Overall, the document illustrates a pivotal moment of embracing vulnerability and creativity, with a clear intention to impact others positively through shared knowledge and experiences. The tone is motivational, suggesting readiness to face challenges and criticism while pursuing personal goals.
+
+```
+📊 Token Usage:
+• Prompt: 3394
+• Completion: 224
+• Total: 3618
+User Input:
+• Give me a comprehensive review of the current document the note the other context here please tell me your unfiltered thoughts in detail.
+```
+---
+
 
 "If this works it's gonna be so cool!"
 *Please work...*
