Winfo Workflow Kickoff

--- a/content/Daily-Notes/2024-11-19.md
+++ b/content/Daily-Notes/2024-11-19.md
@@ -25,6 +25,300 @@ ai-news: '[[AI News/AI-News-2024-11-19]]'
 ## 📝 Daily Reflections
 ---
 
+`Tue, 11/19/2024, 17:26`
+Let's create the [[Winfo]] Obsidian plugin for making, managing, and tracking work efforts on projects
+How does it work:
+- Adds work efforts to notes by linking them in the frontmatter and on the page
+- Handles the routing and file / folder management
+- Helps you tag and mark notes for inclusion in work efforts
+- Facilitates the easy adding of LLM chats or any pasted content to your notes
+Example workflow:
+You have a chat with ChatGPT about a piece of code you're working on. You open your Obsidian vault and use Winfo to add the entire ChatGPT conversation into your Work Effort into a "Chat" file that is automatically linked to both the work effort and the project file.
+You accomplished this by hitting a hotkey that starts the Winfo plugin in Obsidian, which then gives you a textbox into which you are supposed to paste a bunch of text.
+Winfo takes care of everything under the hood, and gives you a formatted document with links based on whatever you added into the text box. It will start as a work effort management assistant, and will evolve into a very complex AI knowledge management application over time.
+
+>Link to Claude Chat: 
+
+https://claude.ai/chat/60b8e10a-5421-4f8c-a402-f6ce6b48fdf3
+
+Claude just gave me a huge block of code, let's iterate on it...
+
+```javascript
+import { 
+  App,
+  Plugin,
+  PluginSettingTab,
+  Setting,
+  TFile,
+  Notice,
+  Modal,
+  MarkdownView,
+  FrontMatterCache,
+  MetadataCache
+} from 'obsidian';
+
+interface WinfoSettings {
+  defaultWorkEffortFolder: string;
+  defaultChatFolder: string;
+  workEffortTemplate: string;
+  chatTemplate: string;
+  hotkey: string;
+}
+
+const DEFAULT_SETTINGS: WinfoSettings = {
+  defaultWorkEffortFolder: 'Work Efforts',
+  defaultChatFolder: 'Chats',
+  workEffortTemplate: '---\ntitle: {{title}}\ndate: {{date}}\ntype: work-effort\nstatus: active\nlinks: []\n---\n\n# {{title}}\n\n## Overview\n\n## Related Chats\n\n## Notes\n\n## Action Items\n',
+  chatTemplate: '---\ntitle: {{title}}\ndate: {{date}}\ntype: chat\nwork_effort: {{workEffort}}\nlinks: []\n---\n\n# {{title}}\n\n## Content\n\n{{content}}\n\n## Notes\n\n## Action Items\n',
+  hotkey: 'Mod+Shift+W'
+};
+
+export default class WinfoPlugin extends Plugin {
+  settings: WinfoSettings;
+
+  async onload() {
+    await this.loadSettings();
+
+    // Add ribbon icon
+    this.addRibbonIcon('clipboard-list', 'Winfo', () => {
+      new WorkEffortModal(this.app, this).open();
+    });
+
+    // Add command to open Winfo modal
+    this.addCommand({
+      id: 'open-winfo-modal',
+      name: 'Add Content to Work Effort',
+      hotkeys: [{ modifiers: ['Mod', 'Shift'], key: 'w' }],
+      callback: () => {
+        new WorkEffortModal(this.app, this).open();
+      }
+    });
+
+    // Add settings tab
+    this.addSettingTab(new WinfoSettingTab(this.app, this));
+  }
+
+  async loadSettings() {
+    this.settings = Object.assign({}, DEFAULT_SETTINGS, await this.loadData());
+  }
+
+  async saveSettings() {
+    await this.saveData(this.settings);
+  }
+}
+
+class WorkEffortModal extends Modal {
+  plugin: WinfoPlugin;
+  content: string = '';
+  selectedWorkEffort: string = '';
+
+  constructor(app: App, plugin: WinfoPlugin) {
+    super(app);
+    this.plugin = plugin;
+  }
+
+  onOpen() {
+    const { contentEl } = this;
+    contentEl.empty();
+
+    contentEl.createEl('h2', { text: 'Add Content to Work Effort' });
+
+    // Work Effort Selection
+    const workEffortSelect = contentEl.createEl('select');
+    this.loadWorkEfforts(workEffortSelect);
+
+    // Content Input
+    const contentInput = contentEl.createEl('textarea', {
+      attr: {
+        placeholder: 'Paste your content here...',
+        rows: '10'
+      }
+    });
+    contentInput.addEventListener('input', (e: Event) => {
+      this.content = (e.target as HTMLTextAreaElement).value;
+    });
+
+    // Add Button
+    const submitButton = contentEl.createEl('button', { text: 'Add Content' });
+    submitButton.addEventListener('click', () => {
+      this.processContent();
+    });
+  }
+
+  async loadWorkEfforts(selectEl: HTMLSelectElement) {
+    const workEffortFolder = this.plugin.settings.defaultWorkEffortFolder;
+    const files = this.app.vault.getFiles();
+    
+    const workEfforts = files.filter(file => {
+      const cache = this.app.metadataCache.getFileCache(file);
+      return cache?.frontmatter?.type === 'work-effort';
+    });
+
+    workEfforts.forEach(file => {
+      const option = selectEl.createEl('option', {
+        text: file.basename,
+        value: file.path
+      });
+    });
+
+    selectEl.addEventListener('change', (e: Event) => {
+      this.selectedWorkEffort = (e.target as HTMLSelectElement).value;
+    });
+  }
+
+  async processContent() {
+    if (!this.content || !this.selectedWorkEffort) {
+      new Notice('Please select a work effort and add content');
+      return;
+    }
+
+    try {
+      // Create chat file
+      const chatFileName = `Chat-${Date.now()}.md`;
+      const chatPath = `${this.plugin.settings.defaultChatFolder}/${chatFileName}`;
+      
+      const template = this.plugin.settings.chatTemplate
+        .replace('{{title}}', chatFileName)
+        .replace('{{date}}', new Date().toISOString())
+        .replace('{{workEffort}}', this.selectedWorkEffort)
+        .replace('{{content}}', this.content);
+
+      await this.app.vault.create(chatPath, template);
+
+      // Update work effort file with link to chat
+      const workEffortFile = this.app.vault.getAbstractFileByPath(this.selectedWorkEffort) as TFile;
+      const workEffortContent = await this.app.vault.read(workEffortFile);
+      
+      const updatedContent = this.addChatLink(workEffortContent, chatPath);
+      await this.app.vault.modify(workEffortFile, updatedContent);
+
+      new Notice('Content added successfully!');
+      this.close();
+    } catch (error) {
+      new Notice('Error processing content: ' + error.message);
+    }
+  }
+
+  addChatLink(content: string, chatPath: string): string {
+    const lines = content.split('\n');
+    const relatedChatsIndex = lines.findIndex(line => line.trim() === '## Related Chats');
+    
+    if (relatedChatsIndex === -1) return content;
+
+    lines.splice(relatedChatsIndex + 1, 0, `- [[${chatPath}]]`);
+    return lines.join('\n');
+  }
+
+  onClose() {
+    const { contentEl } = this;
+    contentEl.empty();
+  }
+}
+
+class WinfoSettingTab extends PluginSettingTab {
+  plugin: WinfoPlugin;
+
+  constructor(app: App, plugin: WinfoPlugin) {
+    super(app, plugin);
+    this.plugin = plugin;
+  }
+
+  display(): void {
+    const { containerEl } = this;
+    containerEl.empty();
+
+    containerEl.createEl('h2', { text: 'Winfo Settings' });
+
+    new Setting(containerEl)
+      .setName('Work Effort Folder')
+      .setDesc('Default folder for work efforts')
+      .addText(text => text
+        .setPlaceholder('Work Efforts')
+        .setValue(this.plugin.settings.defaultWorkEffortFolder)
+        .onChange(async (value) => {
+          this.plugin.settings.defaultWorkEffortFolder = value;
+          await this.plugin.saveSettings();
+        }));
+
+    new Setting(containerEl)
+      .setName('Chat Folder')
+      .setDesc('Default folder for chat logs')
+      .addText(text => text
+        .setPlaceholder('Chats')
+        .setValue(this.plugin.settings.defaultChatFolder)
+        .onChange(async (value) => {
+          this.plugin.settings.defaultChatFolder = value;
+          await this.plugin.saveSettings();
+        }));
+
+    new Setting(containerEl)
+      .setName('Work Effort Template')
+      .setDesc('Template for new work efforts')
+      .addTextArea(text => text
+        .setPlaceholder('Enter template...')
+        .setValue(this.plugin.settings.workEffortTemplate)
+        .onChange(async (value) => {
+          this.plugin.settings.workEffortTemplate = value;
+          await this.plugin.saveSettings();
+        }));
+
+    new Setting(containerEl)
+      .setName('Chat Template')
+      .setDesc('Template for new chat logs')
+      .addTextArea(text => text
+        .setPlaceholder('Enter template...')
+        .setValue(this.plugin.settings.chatTemplate)
+        .onChange(async (value) => {
+          this.plugin.settings.chatTemplate = value;
+          await this.plugin.saveSettings();
+        }));
+  }
+}
+```
+
+[[Winfo]] let's go work effort 1 beginning...
+
+[[WE4458-1119-2024|WE4458: Create Winfo Obsidian App]]
+[[CHAT4458-001]]
+
+Those two files alone are all you need to get started building a complex AI Obsidian plugin. 
+This is so fucking cool man. That's literally so much time and effort saved. I have to spin my chats up every day and now I just...don't need to do that anymore. I never have to redo a chain of thought. I can set my agents on workflows mining intelligence and they can just...spin. Forever. Talking to each other, solving problems, indefinitely, forever. I'm just simulating shit over and over again, forever. I can make my own problems solve themselves. This is...this is unbelievable. This is insane. This is incredible. WOW.
+
+I never have to redo my intellectual work if I pull this off. I can just let my brain go and turn myself into a hybrid hivemind superorganism.
+Woah. WOAH.
+
+---
+
+`Tue, 11/19/2024, 17:08`
+Prompt Engineering! Yay! Nobody signed up nor showed up for Intro to AI and that is A-OK with me. I'm happy to just listen and watch as Liz does their thing. I'm happy to just observe and learn. This is my time to simply participate and enjoy. This is a happy time :) I'm extremely thoroughly excited to make this be what I need it to be. This YouTube thing is what I want and need for the next phase of my life. I'm THRILLED to have this happen for me and for us.
+
+`Tue, 11/19/2024, 17:10`
+Ok this is lit and is gonna get more lit. I'm ready to move forward with my life with this new understanding that I've gained from living and seeing as much life as I've seen. I simply know more than most people I've met, and now I can prove it. I'll build this knowledge bank and then I'll build an AI you can query with things I've collected and curated. The garden of my mind is something I want to offer to the world. We all do don't we? I'm ready. Let's make YouTube (yapping really well about things people care about) my job. It's not about me, or my opinions. It's about giving people actionable information they can use to make their lives easier and better. It's about teaching them to do things that make them happier, healthier, and better at being members of their community.
+
+---
+
+`Tue, 11/19/2024, 16:49`
+About to start tonight's Intro to AI class! And then I'm going to hang at British Bulldog and work, or maybe I'll call a friend and catch up and have a nice conversation with someone, or maybe I'll do more work here at Stoble until I have to leave at 10 and then I'll go to my van and sleep and then I'll go back here to Stoble again tomrrow
+Literally anything could happen. I have a system that works.
+Look at all the shit I was able to create today!??!?
+
+## List of Created Files
+---
+- [[NovaBrew]]
+- [[NovaBrew - Episode 1]]
+- [[NovaBrew Press Sheet]]
+- [[CHAT0301-002]]
+- [[_router-WE0301-1119-2024]]
+- [[CHAT0301-001]]
+- [[WE0301-1119-2024]]
+- [[WE0001-1119-2024|WE0001-1119-2024 Implementation]]
+- [[CHAT-WE001-1119-2024-002]]
+
+There are others, but this is just SOME of the files I was able to create today with this NovaSystem for organizing information and thoughts. I have it all published to the web and my entire life is now fully AI ready.
+
+I'm fucking psyched dude. This is it. This is the moment. Let's fucking GO dude. I'm PUMPED
+
+---
 # NovaBrew
 ### *Real talk through unreal times.*
 
