Test the 'gacp' shortcut

--- a/content/Daily-Notes/2024-11-28.md
+++ b/content/Daily-Notes/2024-11-28.md
@@ -49,6 +49,8 @@ Let's. Do. This.
 
 This transition into a YouTube career feels significant; it’s an opportunity to share my voice, embrace change, and connect with others. I’m determined to turn every experience, whether good or bad, into content that resonates with my audience. Let’s do this!!!!
 
+# Let's Do This
+
 
 `Thu, 11/28/2024, 11:11`
 Thanksgiving day :) :(
