Upload Daily Note

--- a/content/Daily-Notes/2024-12-05.md
+++ b/content/Daily-Notes/2024-12-05.md
@@ -46,6 +46,23 @@ Now I'm joined into the [[Multiverse School]] researcher's meetup.
 
 Ok [[o1]] is really good I'm about to go figure shit out I'm gonna meditate on what I just experienced with Max and the MVS crew, and now I'm gonna be vibing out and fully going through it. Meditating deep. Making things in my brain manifest. I'm about to pop baby. Here we fucking GOOOOOO
 
+`Thu, 12/05/2024, 17:06`
+ChatGPT says:
+
+The note reflects on a day filled with excitement and significant interactions. The writer predicts a breakthrough with the [[NovaSystem]], expresses appreciation for a meaningful conversation with Max Kokinakas, and shares plans to meditate on these experiences. Additionally, today's Pokémon highlighted is Cascoon (#268).
+
+`Thu, 12/05/2024, 18:46`
+I argued with o1 and it refused to build itself. Rude lol
+In the meantime, I got a version of the NovaSystem running in Gradio I think it's gonna work with just a little more troubleshooting.
+
+`Thu, 12/05/2024, 18:59`
+Troubleshooting commencing...
+
+`Thu, 12/05/2024, 20:08`
+Still troubleshooting...
+
+
+
 
 
 
