Upload Daily Note

--- a/content/Daily-Notes/2024-12-05.md
+++ b/content/Daily-Notes/2024-12-05.md
@@ -62,6 +62,21 @@ Troubleshooting commencing...
 Still troubleshooting...
 
 
+`Thu, 12/05/2024, 20:14`
+Am I finally gonna get it to output some code without refusing??
+![[Screen Shot 2024-12-05 at 8.14.38 PM.png]]
+lol nope
+![[Screen Shot 2024-12-05 at 8.15.07 PM.png]]
+
+`Thu, 12/05/2024, 20:58`
+Ok it's amazing, but it's suuuuuuper shitty still too. It's not gonna allow us to build it lol. Disappointing.
+
+I'm brute forcing it with Flask
+
+
+`Thu, 12/05/2024, 21:02`
+
+
 
 
 
