Upload Daily Note

--- a/content/Daily-Notes/2024-12-06.md
+++ b/content/Daily-Notes/2024-12-06.md
@@ -31,7 +31,11 @@ newsletter: '[[Newsletters/NovaBrew-2024-12-06]]'
 
 ## 📝 Daily Reflections
 
-< Write Here >
+`Fri, 12/06/2024, 18:39`
+Ding dong we got something good here check this out:
+![[galactic-wildlife-01-audio-only.mov]]
+I bet that file will be too big for Cloudflare to push it...
+
 
 ---
 
