Update Daily Note

--- a/content/Daily-Notes/2024-12-06.md
+++ b/content/Daily-Notes/2024-12-06.md
@@ -36,6 +36,51 @@ Ding dong we got something good here check this out:
 ![[galactic-wildlife-01-audio-only.mov]]
 I bet that file will be too big for Cloudflare to push it...
 
+`Fri, 12/06/2024, 19:13`
+WHAT NO WAY IT WORKED!!!?!?!?!?
+
+Ok that changes EVERYTHING
+HANG THE FUCK ON 🤪
+
+Ok this actually really does change a lot. I can just do that, with my laptop, [[CapCut]], [[Logic Pro]], my [[Scarlett 2i2 Interface]], my [[AKG P420]] condenser mic, and an hour of my time or less. 
+
+Holy shit. Now how do I get visuals and graphics on it quickly or free up my time from doing it...
+Could I find a way to hire someone to use Midjourney to generate the images?
+
+HMMMM
+
+`Fri, 12/06/2024, 19:18`
+On today's episode of product research, I discovered the YouTube channel "AI Search" [[AI Search YouTube]]
+
+![[Screen Shot 2024-12-06 at 7.18.17 PM.png]]
+
+That's it. That's the answer. Look, her's faceless, he's got 251k subscribers, he's incredibly well branded, 255 videos, and that's it. Look at his description:
+
+![[Screen Shot 2024-12-06 at 7.19.43 PM.png]]
+
+I gotta do that too. Look at the blue!! It's beautiful!
+
+Ok Ok Ok Ok Ok Ok Ok Ok Ok
+
+### Game Plan
+---
+Look at the way he does his thumbnails. Let's star there. Every single YouTuber yaps about how important thumbnails are, and I think this is the direction I want to go. This is REALLY good stuff. I want to watch all of these!
+
+![[Screen Shot 2024-12-06 at 7.20.32 PM.png]]
+
+- Day: 341 of 2024 (93%)
+- Week: 49 of 52
+- Quarter Progress: 67 of 92 (73%)
+- Days until EOY: 24
+- Discovered a successful YouTube channel for inspiration.
+- Plan to focus on creating effective thumbnails.
+- Emphasis on improving branding and video production.
+
+`Fri, 12/06/2024, 21:03`
+
+
+
+
 
 ---
 
