Update Daily Note

--- a/content/Daily-Notes/2024-12-06.md
+++ b/content/Daily-Notes/2024-12-06.md
@@ -77,6 +77,23 @@ Look at the way he does his thumbnails. Let's star there. Every single YouTuber 
 - Emphasis on improving branding and video production.
 
 `Fri, 12/06/2024, 21:03`
+Ok I got to go
+I'm still not able to fully get these AI LLMs to make the full NovaSystem
+Maybe...I'll just do it right now?
+
+`Fri, 12/06/2024, 22:09`
+Ok I did it.
+
+`Fri, 12/06/2024, 23:36`
+Check it out:
+![[Screen Shot 2024-12-06 at 11.35.58 PM.png]]
+
+I got AutoGen running within the NovaSystem
+Hell yeah. This really feels like the beginning of something significant.
+
+
+
+
 
 
 
