Upload Daily Note

--- a/content/Daily-Notes/2024-12-09.md
+++ b/content/Daily-Notes/2024-12-09.md
@@ -66,7 +66,27 @@ https://sora.com/
 
 This...changes everything. Wow.
 
+`Mon, 12/09/2024, 13:55`
+Ok so there's an obvious solution to my financial problems that I've been ignoring but will be doing more of in the very near future - webinars.
 
+I will hold a webinar weekly, independent of the Multiverse School, just for me and my followers. They can pay me for access.
+
+We will just hang out and talk about AI readiness. We will use video tools that are modern and we will discuss the times at hand, the near-future implications, and more.
+
+It will be for content creators like me who are interested in hanging with other content creators in a community of likeminded individuals specifically to talk about AI strategy and AI readiness. 
+
+It's for anyone really who WANTS to be a content creator too, to come and participate and hang out, but only content creators will be allowed to speak when we do podcasts. We don't want to derail the conversation with a lot of low level questions. We want to keep things focused on the lives and concerns of content creators. 
+
+`Mon, 12/09/2024, 14:05`
+It's really popping off on TikTok right now. People are really doing what they need to do. 
+
+There's something happening inside me. I'm getting this thing started. This needs to happen, and I'm going to make it so.
+
+There's SO much that needs to be done and SO much that's changing.
+
+I need to find a way to charge for a weekly meetup, and that will be the way I tap back in to my community.
+
+It'll be an "[[AI-Strategy-Readiness-Meetup]]"
 
 
 
